# readwise-vector-db

./: .coverage 2  .coveragerc  .dockerignore  .env 2  .env.example  .env.supabase.example  .gitignore  .markdown-link-check.json  .markdownlint.yaml  .pre-commit-config.yaml  .vercel.example.json  .vercelignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUE_6_FIXES.md  Makefile  README.md  VERCEL_DEPLOYMENT_ISSUE.md  alembic.ini  create_schema.sql  docker-compose.yaml  locustfile.py  pyproject.toml  pytest.ini  requirements.txt  run_backfill_local.py  vercel.json  vercel.json.backup  vercel_build.sh
.clinerules/: dev_workflow.md  taskmaster.md
.cursor/rules/: git_strategy.mdc
.gemini/: settings.json
.github/instructions/: dev_workflow.md  taskmaster.md
.github/workflows/: ci.yml  perf.yml  sync.yml  vercel-deploy.yml
.roo/rules/: dev_workflow.md  roo_rules.md  self_improve.md  taskmaster.md
.roo/rules-orchestrator/: orchestrator-rules
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
.trae/rules/: dev_workflow.md  taskmaster.md
.windsurf/rules/: dev_workflow.md  taskmaster.md
alembic/: env.py
alembic/versions/: 6e900a582819_create_initial_tables.py
api/: handler.py  index.py
docs/: architecture-sse.md  deployment-sse.md  mcp-sse-usage.md  testing.md
docs/examples/: sse-demo.html
docs/images/: architecture.md
readwise_vector_db/: api.py  api_old.py  config.py  main.py
readwise_vector_db/api/: __init__.py  main.py  routes.py
readwise_vector_db/core/: embedding.py  readwise.py  search.py
readwise_vector_db/db/: __init__.py  database.py  supabase_ops.py  upsert.py
scripts/: deploy_vercel.sh  run_migrations_supabase.sh
tests/: conftest.py  test_api.py  test_api_health_metrics.py  test_backward_compatibility.py  test_cli.py  test_config.py  test_core_search.py  test_database.py  test_embedding.py  test_import_misc.py  test_mcp_framing.py  test_mcp_server.py  test_mcp_server_errors.py  test_mcp_server_shutdown.py  test_mcp_sse.py  test_models_smoke.py  test_parser.py  test_readwise.py  test_search_service.py  test_supabase_ops.py  test_upsert.py
tools/: check_coverage.py  coverage_buckets.py
(+14 files in other folders)
