[tool.poetry]
name = "readwise-vector-db"
version = "0.1.0"
description = "Self-hosted Readwise vector database for semantic search."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "readwise_vector_db"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
sqlmodel = "^0.0.24"
sqlalchemy = "^2.0.41"
psycopg = {extras = ["binary"], version = "^3.2.9"}
httpx = "^0.28.1"
openai = "^1.90.0"
tiktoken = "^0.9.0"
typer = "^0.16.0"
prometheus-fastapi-instrumentator = "^7.1.0"
pgvector = "^0.4.1"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.12.0"
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
respx = "^0.22.0"
locust = "^2.37.11"
pre-commit = "^4.2.0"
alembic = "^1.16.2"
psycopg2-binary = "^2.9.10"
pytest-cov = "^5.0.0"
coverage = {version = "^7.4.4", extras = ["toml"]}

[tool.poetry.scripts]
rwv = "readwise_vector_db.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["readwise_vector_db"]

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = [
  "pydantic.mypy"
]
